Correct link to uri_create_str()

--- a/uri_create_uri.3
+++ b/uri_create_uri.3
@@ -95,7 +95,7 @@ A memory allocation operation failed\&.
 .PP
 
 \fBliburi\fR(3),
-\fBuri_create_uri\fR(3),
+\fBuri_create_str\fR(3),
 \fBuri_destroy\fR(3),
 \fBuri_absolute\fR(3),
 \fBuri_str\fR(3)\&.
