--- a/uri_host.3
+++ b/uri_host.3
@@ -1,5 +1,5 @@
 '\" t
-.\"     Title: uri_scheme
+.\"     Title: uri_host
 .\"    Author: Mo McRoberts
 .\" Generator: DocBook XSL Stylesheets v1.77.1 <http://docbook.sf.net/>
 .\"      Date: 12/05/2012
@@ -7,7 +7,7 @@
 .\"    Source: System Programmer's Manual
 .\"  Language: English
 .\"
-.TH "URI_SCHEME" "3" "12/05/2012" "System Programmer's Manual" "URI Functions"
+.TH "URI_HOST" "3" "12/05/2012" "System Programmer's Manual" "URI Functions"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -28,7 +28,7 @@
 .\" * MAIN CONTENT STARTS HERE *
 .\" -----------------------------------------------------------------
 .SH "NAME"
-uri_scheme \- copy a URI\*(Aqs scheme into a buffer
+uri_host \- copy a URI\*(Aqs hostname (authority) into a buffer
 .SH "LIBRARY"
 .PP
 URI parsing library (liburi, \-luri)
@@ -39,23 +39,25 @@ URI parsing library (liburi, \-luri)
 #include <liburi\&.h>
 .fi
 .ft
-.HP \w'size_t\ uri_scheme('u
-.BI "size_t uri_scheme(URI\ *restrict\ " "uri" ", char\ *\ " "buffer" ", size_t\ " "size" ");"
+.HP \w'size_t\ uri_host('u
+.BI "size_t uri_host(URI\ *restrict\ " "uri" ", char\ *\ " "buffer" ", size_t\ " "size" ");"
 .SH "DESCRIPTION"
 .PP
 The
-\fBuri_scheme\fR
-function copies the scheme from a URI into a supplied buffer\&.
+\fBuri_host\fR
+function copies the hostname (also called the authority) from a URI into a supplied buffer\&.
+.PP
+The hostname is copied without any decoration\&. Specifically, if the hostname in the URI is an IPv6 literal, it is copied without the surrounding square brackets\&.
 .SH "PARAMETERS"
 .PP
 \fIuri\fR
 .RS 4
-The source URI to copy the scheme from\&.
+The source URI to copy the hostname from\&.
 .RE
 .PP
 \fIbuffer\fR
 .RS 4
-The buffer to store the URI\*(Aqs scheme in\&.
+The buffer to store the URI\*(Aqs hostname in\&.
 \fIbuffer\fR
 may be
 \fBNULL\fR
@@ -79,13 +81,13 @@ The size of
 .SH "RETURN VALUE"
 .PP
 If successful,
-\fBuri_scheme\fR
-returns the total number of bytes required to store the URI\*(Aqs scheme, including the
+\fBuri_host\fR
+returns the total number of bytes required to store the URI\*(Aqs hostname, including the
 \fBNULL\fR
 terminator (that is, one greater than the length of the string measured in bytes)\&. This return will occur whether a buffer is supplied or not, and regardless of its size\&.
 .PP
-If the URI has no scheme,
-\fBuri_scheme\fR
+If the URI has no host,
+\fBuri_host\fR
 will return
 0, however it will still copy an empty string to
 \fIbuffer\fR
@@ -97,14 +99,14 @@ and
 is non\-zero\&.
 .PP
 If an error occurs,
-\fBuri_scheme\fR
+\fBuri_host\fR
 returns
 (size_t) \-1, and sets
 \fIerrno\fR
 accordingly\&.
 .PP
 An application can invoke
-\fBuri_scheme\fR, passing
+\fBuri_host\fR, passing
 \fBNULL\fR
 as
 \fIbuffer\fR
@@ -126,17 +128,17 @@ in order to to determine whether the copied string was truncated: if the return 
 .RS 4
 .\}
 .nf
-#define BUFFER_SIZE 8
+#define BUFFER_SIZE 16
 	  
 URI *uri;
 char buffer[BUFFER_SIZE];
 size_t r;
 
 uri = uri_create_str("http://example\&.com/", NULL);
-r = uri_scheme(uri, buffer, BUFFER_SIZE);
+r = uri_host(uri, buffer, BUFFER_SIZE);
 
-/* assuming no errors have occurred, buffer will contain \*(Aqhttp\*(Aq and
- * r will be 5\&.
+/* assuming no errors have occurred, buffer will contain \*(Aqexample\&.com\*(Aq and
+ * r will be 12\&.
  */
 printf("buffer=\*(Aq%s\*(Aq, r=%lu\en", buffer, (unsigned long) r);
 	
