--- a/uri_absolute.3
+++ b/uri_absolute.3
@@ -1,13 +1,13 @@
 '\" t
-.\"     Title: uri_absolute_path
+.\"     Title: uri_absolute
 .\"    Author: Mo McRoberts
 .\" Generator: DocBook XSL Stylesheets v1.77.1 <http://docbook.sf.net/>
-.\"      Date: 12/06/2012
+.\"      Date: 02/09/2013
 .\"    Manual: URI Functions
 .\"    Source: System Programmer's Manual
 .\"  Language: English
 .\"
-.TH "URI_ABSOLUTE_PATH" "3" "12/06/2012" "System Programmer's Manual" "URI Functions"
+.TH "URI_ABSOLUTE" "3" "02/09/2013" "System Programmer's Manual" "URI Functions"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -28,7 +28,7 @@
 .\" * MAIN CONTENT STARTS HERE *
 .\" -----------------------------------------------------------------
 .SH "NAME"
-uri_absolute \- determine whether the path in a URI is relative or absolute
+uri_absolute \- determine whether a URI is relative or absolute
 .SH "LIBRARY"
 .PP
 URI parsing library (liburi, \-luri)
@@ -39,23 +39,15 @@ URI parsing library (liburi, \-luri)
 #include <liburi\&.h>
 .fi
 .ft
-.HP \w'int\ uri_absolute_path('u
-.BI "int uri_absolute_path(URI\ *" "uri" ");"
+.HP \w'int\ uri_absolute('u
+.BI "int uri_absolute(URI\ *" "uri" ");"
 .SH "DESCRIPTION"
 .PP
 The
-\fBuri_absolute_path\fR
-function determines whether the path in a parsed URI is absolute or relative\&. An absolute path is one begins with a "/" character\&.
+\fBuri_absolute\fR
+function determines whether a parsed URI is absolute or relative\&.
 .PP
-URIs which do not include a path at all are not considered to be absolute by this function\&. Any URI which does include a path and for which
-\fBuri_absolute\fR(3)
-returns
-1
-will be determined to have an absolute path\&. More specifically, any URI which includes either a scheme or a hostname as well as a path are always considered to have an absolute path (that is,
-file:foo
-and
-file:/foo
-will give the same results after parsing)\&.
+An absolute URI is one which does not require the use of a base URI in order to be used\&.
 .SH "PARAMETERS"
 .PP
 \fIuri\fR
@@ -65,12 +57,12 @@ The URI to evaluate\&.
 .SH "RETURN VALUE"
 .PP
 If successful,
-\fBuri_absolute_path\fR
+\fBuri_absolute\fR
 returns
 1
 if
 \fIuri\fR
-contains a URI with an absolute path, and
+contains an absolute URI, and
 0
 otherwise\&.
 .PP
@@ -86,30 +78,18 @@ accordingly\&.
 .RS 4
 .\}
 .nf
-URI *uri;
-int result;
+URI *relative, *absolute;
+int r, a;
 
-uri = uri_create_str("http://example\&.com", NULL);
-/* result will be 0 because no path is present */
-result = uri_absolute_path(uri);
-uri_destroy(uri);
+absolute = uri_create_str("http://example\&.com", NULL);
 
-uri = uri_create_str("/project", NULL);
-/* result will be 1 because an absolute path was parsed */
-result = uri_absolute_path(uri);
-uri_destroy(uri);
+relative = uri_create_str("sample?toggle=1", NULL);
 
-uri = uri_create_str("results/output", NULL);
-/* result will be 0 because a relative path was parsed */
-result = uri_absolute_path(uri);
-uri_destroy(uri);
+/* a will be set to 1 */
+a = uri_absolute(absolute);
 
-uri = uri_create_str("file:output", NULL);
-/* result will be 1 because a scheme was present, meaning the path
- * is always interpreted as as being absolute (in this case, "/output")
- */
-result = uri_absolute_path(uri);
-uri_destroy(uri);
+/* r will be set to 0 */
+b = uri_absolute(relative);
 	
 .fi
 .if n \{\
@@ -119,4 +99,4 @@ uri_destroy(uri);
 .PP
 
 \fBliburi\fR(3),
-\fBuri_absolute\fR(3)\&.
+\fBuri_absolute_path\fR(3)\&.
